--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .ipynb_checkpoints/Interactive_fit_main-checkpoint.ipynb
 /results
 **/*.cpython-38..pyc
-.ipynb_checkpoints/definitions-checkpoint.py
+.ipynb_checkpoints
 __pycache__/definitions.cpython-38.pyc
 *checkpoint.ipynb
 *checkpoint.md
